--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,8 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /CMS/WordPress/Heroku-Wordpress-MySQL%20-%20Copy/
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /CMS/WordPress/Heroku-Wordpress-MySQL%20-%20Copy/index.php [L]
+RewriteCond %{SERVER_PORT} 80 
+RewriteRule ^(.*)$ https://www.yoursite.com/$1 [R,L]
 </IfModule>
 
 # END WordPress
