--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80 
-RewriteRule ^(.*)$ https://www.yoursite.com/$1 [R,L]
+RewriteRule ^(.*)$ https://tracker-app.tooltags.co/$1 [R,L]
 </IfModule>
 
 # END WordPress
