--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,12 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
+RewriteBase /CMS/WordPress/Heroku-Wordpress-MySQL%20-%20Copy/
+RewriteCond %{SERVER_PORT} 80 
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /CMS/WordPress/Heroku-Wordpress-MySQL%20-%20Copy/index.php [L]
 RewriteCond %{SERVER_PORT} 80 
 RewriteRule ^(.*)$ https://tracker-app.tooltags.co/$1 [R,L]
 </IfModule>
